--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   navigator.clipboard.writeText(copyText);
 
   /* Alert the copied text */
-  alert("Copied the text: " + copyText);
+  alert("adresa zkopírována");
 }
         </script>
     </head>
