--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </div>
         <div class="web">
             <a href="https://toxiclab.cz">www.toxiclab.cz</a>
+            <p>Marketing &#8857; weby &#8857; grafika</p>
         </div>
         <div class="kontakty">
             <a class="socky" href="https://www.facebook.com" target="_blank">fb</a>
